--- a/langchain/0_chat_with_your_data.ipynb
+++ b/langchain/0_chat_with_your_data.ipynb
@@ -82,23 +82,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e12901c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# import openai\n",
-    "# import sys\n",
-    "# sys.path.append('../..')\n",
-    "# from dotenv import load_dotenv, find_dotenv\n",
-    "# _ = load_dotenv(find_dotenv()) # read local .env file\n",
-    "\n",
-    "# openai.api_key  = os.environ['OPENAI_API_KEY_1']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0defadb4",
    "metadata": {},
@@ -110,19 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a2c2dd81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.document_loaders import PyPDFLoader\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
     "loader = PyPDFLoader(\"pdf_data/mssc6010_lectures.pdf\")\n",
     "pages = loader.load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f4450327",
    "metadata": {},
    "outputs": [
@@ -132,7 +115,7 @@
        "11"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2e8a86cb",
    "metadata": {},
    "outputs": [
@@ -213,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "153cebfa",
    "metadata": {},
    "outputs": [
@@ -236,7 +219,7 @@
        " 'page_label': '1'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "96905897",
    "metadata": {},
    "outputs": [],
@@ -273,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "b4209dda",
    "metadata": {},
    "outputs": [],
@@ -284,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "fc153059",
    "metadata": {},
    "outputs": [],
@@ -301,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "535c0801",
    "metadata": {},
    "outputs": [
@@ -376,7 +359,7 @@
        " 'k2\\n1']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "a5baf4d4",
    "metadata": {},
    "outputs": [
@@ -397,7 +380,7 @@
        "['Fall 2019\\nMSSC 6010\\nLectures Peter Dobbs\\n0.1 Summary\\n0.1.1 Recall\\nUseful Derivatives\\n∂ln f(x)\\n∂x =\\n∂\\n∂xf(x)\\nf(x)\\n∂\\n∂θ ·θ−m = −θ−m−1\\n0.1.2 Counting Techniques\\nDeﬁnition 0.1. Combinations - ”n choose k”\\nCk,n =\\n(n\\nk\\n)\\n= n!\\nk!(n−k)! (0.1)\\n0.1.3 Axiomatic Probability\\nThe Three Axioms of Probability Consider an experiment with sample space Ω. For each\\nevent E of the sample space Ω. assume that a number P(E) is deﬁned that satisﬁes the following\\nthree axioms:\\n1. 0 ≤P(E) ≤1\\n2. P(Ω) = 1\\n3. For any sequence of mutually exclusive events E1,E2,... (that is Ei ∩Ej = ∅) for all i̸= j,\\nP\\n(∞⋃\\ni=1\\n)\\n=\\n∞∑\\ni=1\\nP\\n(\\nEi\\n)\\nTheorem 0.2. Bayes Theorem\\nP(B|A) = P(A|B) ·P(B)\\nP(A) (0.2)\\n0.1.4 Markov’s Theorem and Chebyshev’s Inequality\\nDeﬁnition 0.3. Chebyshev’s Inequality – Can be stated as any of\\n(a) P(|X−µ|≥ k) ≤σ2\\nk2\\n(b) P(|X−µ|<k) ≥1 −σ2\\nk2\\n(c) P(|X−µ|≥ kσ) ≤ 1\\nk2\\n(d) P(|X−µ|<kσ ) ≥1 − 1\\nk2\\n1']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "e5d62bb0",
    "metadata": {},
    "outputs": [
@@ -447,7 +430,7 @@
        " '≥1 −σ2\\nk2\\n(c) P(|X−µ|≥ kσ) ≤ 1\\nk2\\n(d) P(|X−µ|<kσ ) ≥1 − 1\\nk2\\n1']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "392c784e",
    "metadata": {},
    "outputs": [
@@ -513,7 +496,7 @@
        " '1.\\nCorollary 6.1.1. If X ∼N(µ,σ), then Z = X−µ\\nσ ∼N(0,1), and Z2 ∼χ2\\n1.\\nTheorem 6.2. If X1,...,X r are independent random variables with chi-square distributionsχ2\\nn1 ,...,χ 2\\nnr\\nrespectively, then\\nY =\\nr∑\\ni=1\\nXi ∼χ2\\ns, where s=\\nr∑\\ni=1\\nni.\\n11']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "17805dc8",
    "metadata": {},
    "outputs": [
@@ -558,7 +541,7 @@
        " ' Techniques\\nDeﬁnition 0.']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,6 +553,72 @@
     "    chunk_overlap=0\n",
     ")\n",
     "docs = text_splitter.split_documents(pages)\n",
+    "[docs[i].page_content for i in range(10)] # just show the first 10 chunks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf3153c",
+   "metadata": {},
+   "source": [
+    "### Context aware splitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9985f5",
+   "metadata": {},
+   "source": [
+    "Ideally we would be able to use a loader that uses `Mathpix` to make this even more context aware and then use the `LatexTextSplitter`. That would look something like...\n",
+    "\n",
+    "```python\n",
+    "from langchain_community.document_loaders import MathpixPDFLoader\n",
+    "from langchain.text_splitter import LatexTextSplitter\n",
+    "\n",
+    "loader = MathpixPDFLoader(\"path/to/your/math-heavy.pdf\")\n",
+    "documents = loader.load()\n",
+    "\n",
+    "splitter = LatexTextSplitter(chunk_size=200, chunk_overlap=10)\n",
+    "docs = splitter.split_documents(documents)\n",
+    "```\n",
+    "\n",
+    "For now, let's proceed with how we have the documents loaded at this point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b463b2f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fall 2019\\nMSSC 6010\\nLectures Peter Dobbs\\n0.1 Summary\\n0.1.1 Recall\\nUseful Derivatives\\n∂ln f(x)\\n∂x =\\n∂\\n∂xf(x)\\nf(x)\\n∂\\n∂θ ·θ−m = −θ−m−1\\n0.1.2 Counting Techniques\\nDeﬁnition 0.1. Combinations - ”n choose',\n",
+       " '”n choose k”\\nCk,n =\\n(n\\nk\\n)\\n= n!\\nk!(n−k)! (0.1)\\n0.1.3 Axiomatic Probability\\nThe Three Axioms of Probability Consider an experiment with sample space Ω. For each\\nevent E of the sample space Ω. assume',\n",
+       " 'Ω. assume that a number P(E) is deﬁned that satisﬁes the following\\nthree axioms:\\n1. 0 ≤P(E) ≤1\\n2. P(Ω) = 1\\n3. For any sequence of mutually exclusive events E1,E2,... (that is Ei ∩Ej = ∅) for all i̸=',\n",
+       " 'all i̸= j,\\nP\\n(∞⋃\\ni=1\\n)\\n=\\n∞∑\\ni=1\\nP\\n(\\nEi\\n)\\nTheorem 0.2. Bayes Theorem\\nP(B|A) = P(A|B) ·P(B)\\nP(A) (0.2)\\n0.1.4 Markov’s Theorem and Chebyshev’s Inequality\\nDeﬁnition 0.3. Chebyshev’s Inequality – Can be',\n",
+       " '– Can be stated as any of\\n(a) P(|X−µ|≥ k) ≤σ2\\nk2\\n(b) P(|X−µ|<k) ≥1 −σ2\\nk2\\n(c) P(|X−µ|≥ kσ) ≤ 1\\nk2\\n(d) P(|X−µ|<kσ ) ≥1 − 1\\nk2\\n1',\n",
+       " 'Fall 2019\\nMSSC 6010\\nLectures Peter Dobbs\\n0.1.5 Distribution Use Summary\\nDistribution Use\\nBinomial Let X be number of success events in event set, size n.\\nThen X ∼Bin(n,π).\\nPoisson Let X be number of',\n",
+       " 'number of particular events occur within deﬁned time or space\\nThen X ∼Pois(λ)\\nGeometric Let X be number of failure events before success event.\\nThen X ∼Geo(π).\\n0.1.6 t-Distribution\\n1. has similar',\n",
+       " 'similar shape as N(0,1), but is ﬂatter\\n2. is symmetric around 0, like N(0,1) is\\n3. has range from −∞to ∞\\n4. depends on the degrees of freedom df\\n5. as the dfincreases, t-distribution approaches',\n",
+       " 'N(0,1)\\n6. Applet: understanding the t-distribution\\n0.1.7 Methods of Moments (MOM) Estimators\\nαr = E[Xr] mr = 1\\nn\\nn∑\\ni=1\\nXr\\ni\\n\\uf8f1\\n\\uf8f4\\uf8f4\\uf8f4\\uf8f4\\uf8f2\\n\\uf8f4\\uf8f4\\uf8f4\\uf8f4\\uf8f3\\nα1(θ1,...,θ k) = m1\\nα2(θ1,...,θ k) = m2\\n... ...\\nαk(θ1,...,θ',\n",
+       " 'k) = mk\\n2']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.text_splitter import LatexTextSplitter\n",
+    "\n",
+    "splitter = LatexTextSplitter(\n",
+    "    chunk_size=200,\n",
+    "    chunk_overlap=10\n",
+    ")\n",
+    "docs = splitter.split_documents(pages)\n",
     "[docs[i].page_content for i in range(10)] # just show the first 10 chunks"
    ]
   }
