--- a/langchain/0_chat_with_your_data.ipynb
+++ b/langchain/0_chat_with_your_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "05119138",
    "metadata": {},
    "outputs": [
@@ -11,9 +11,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: langchain-community in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (0.3.29)\n",
-      "Requirement already satisfied: dotenv in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (0.9.9)\n",
-      "Collecting tiktoken\n",
-      "  Downloading tiktoken-0.11.0-cp312-cp312-win_amd64.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: tiktoken in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (0.11.0)\n",
+      "Requirement already satisfied: openai in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (1.107.3)\n",
       "Requirement already satisfied: langchain-core<2.0.0,>=0.3.75 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langchain-community) (0.3.76)\n",
       "Requirement already satisfied: langchain<2.0.0,>=0.3.27 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langchain-community) (0.3.27)\n",
       "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langchain-community) (2.0.43)\n",
@@ -52,19 +51,18 @@
       "Requirement already satisfied: greenlet>=1 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from SQLAlchemy<3,>=1.4->langchain-community) (3.2.4)\n",
       "Requirement already satisfied: mypy-extensions>=0.3.0 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.6.7->langchain-community) (1.1.0)\n",
       "Requirement already satisfied: regex>=2022.1.18 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from tiktoken) (2025.9.1)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langsmith>=0.1.125->langchain-community) (0.28.1)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from openai) (4.10.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\python312\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from openai) (0.28.1)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in c:\\python312\\lib\\site-packages (from openai) (0.11.0)\n",
+      "Requirement already satisfied: sniffio in c:\\python312\\lib\\site-packages (from openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from openai) (4.67.1)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\python312\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.16.0)\n",
       "Requirement already satisfied: orjson>=3.9.14 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langsmith>=0.1.125->langchain-community) (3.11.3)\n",
       "Requirement already satisfied: requests-toolbelt>=1.0.0 in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from langsmith>=0.1.125->langchain-community) (1.0.0)\n",
       "Requirement already satisfied: zstandard>=0.23.0 in c:\\python312\\lib\\site-packages (from langsmith>=0.1.125->langchain-community) (0.25.0)\n",
-      "Requirement already satisfied: anyio in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (4.10.0)\n",
-      "Requirement already satisfied: httpcore==1.* in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (1.0.9)\n",
-      "Requirement already satisfied: h11>=0.16 in c:\\python312\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (0.16.0)\n",
-      "Requirement already satisfied: sniffio>=1.1 in c:\\python312\\lib\\site-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.125->langchain-community) (1.3.1)\n",
-      "Downloading tiktoken-0.11.0-cp312-cp312-win_amd64.whl (884 kB)\n",
-      "   ---------------------------------------- 0.0/884.3 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 884.3/884.3 kB 8.0 MB/s  0:00:00\n",
-      "Installing collected packages: tiktoken\n",
-      "Successfully installed tiktoken-0.11.0\n",
+      "Requirement already satisfied: colorama in c:\\users\\peter\\appdata\\roaming\\python\\python312\\site-packages (from tqdm>4->openai) (0.4.6)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -78,7 +76,7 @@
     }
    ],
    "source": [
-    "%pip install langchain-community tiktoken --user"
+    "%pip install langchain-community tiktoken openai --user"
    ]
   },
   {
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "96905897",
    "metadata": {},
    "outputs": [],
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b4209dda",
    "metadata": {},
    "outputs": [],
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "fc153059",
    "metadata": {},
    "outputs": [],
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "535c0801",
    "metadata": {},
    "outputs": [
@@ -359,7 +357,7 @@
        " 'k2\\n1']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "a5baf4d4",
    "metadata": {},
    "outputs": [
@@ -380,7 +378,7 @@
        "['Fall 2019\\nMSSC 6010\\nLectures Peter Dobbs\\n0.1 Summary\\n0.1.1 Recall\\nUseful Derivatives\\n∂ln f(x)\\n∂x =\\n∂\\n∂xf(x)\\nf(x)\\n∂\\n∂θ ·θ−m = −θ−m−1\\n0.1.2 Counting Techniques\\nDeﬁnition 0.1. Combinations - ”n choose k”\\nCk,n =\\n(n\\nk\\n)\\n= n!\\nk!(n−k)! (0.1)\\n0.1.3 Axiomatic Probability\\nThe Three Axioms of Probability Consider an experiment with sample space Ω. For each\\nevent E of the sample space Ω. assume that a number P(E) is deﬁned that satisﬁes the following\\nthree axioms:\\n1. 0 ≤P(E) ≤1\\n2. P(Ω) = 1\\n3. For any sequence of mutually exclusive events E1,E2,... (that is Ei ∩Ej = ∅) for all i̸= j,\\nP\\n(∞⋃\\ni=1\\n)\\n=\\n∞∑\\ni=1\\nP\\n(\\nEi\\n)\\nTheorem 0.2. Bayes Theorem\\nP(B|A) = P(A|B) ·P(B)\\nP(A) (0.2)\\n0.1.4 Markov’s Theorem and Chebyshev’s Inequality\\nDeﬁnition 0.3. Chebyshev’s Inequality – Can be stated as any of\\n(a) P(|X−µ|≥ k) ≤σ2\\nk2\\n(b) P(|X−µ|<k) ≥1 −σ2\\nk2\\n(c) P(|X−µ|≥ kσ) ≤ 1\\nk2\\n(d) P(|X−µ|<kσ ) ≥1 − 1\\nk2\\n1']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "e5d62bb0",
    "metadata": {},
    "outputs": [
@@ -430,7 +428,7 @@
        " '≥1 −σ2\\nk2\\n(c) P(|X−µ|≥ kσ) ≤ 1\\nk2\\n(d) P(|X−µ|<kσ ) ≥1 − 1\\nk2\\n1']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "392c784e",
    "metadata": {},
    "outputs": [
@@ -496,7 +494,7 @@
        " '1.\\nCorollary 6.1.1. If X ∼N(µ,σ), then Z = X−µ\\nσ ∼N(0,1), and Z2 ∼χ2\\n1.\\nTheorem 6.2. If X1,...,X r are independent random variables with chi-square distributionsχ2\\nn1 ,...,χ 2\\nnr\\nrespectively, then\\nY =\\nr∑\\ni=1\\nXi ∼χ2\\ns, where s=\\nr∑\\ni=1\\nni.\\n11']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "17805dc8",
    "metadata": {},
    "outputs": [
@@ -541,7 +539,7 @@
        " ' Techniques\\nDeﬁnition 0.']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b463b2f2",
    "metadata": {},
    "outputs": [
@@ -606,7 +604,7 @@
        " 'k) = mk\\n2']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,6 +618,177 @@
     ")\n",
     "docs = splitter.split_documents(pages)\n",
     "[docs[i].page_content for i in range(10)] # just show the first 10 chunks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7732f44d",
+   "metadata": {},
+   "source": [
+    "## Vectors and Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c678028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install chromadb --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7e939b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append('../..')\n",
+    "\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "\n",
+    "openai_api_key  = os.environ['OPENAI_API_KEY_1']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7584926",
+   "metadata": {},
+   "source": [
+    "Start by loading in some PDF documents from local storage. These documents are all my own work for a graduate level math course."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "249733cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "142"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load\n",
+    "from langchain.document_loaders import PyPDFLoader\n",
+    "\n",
+    "loaders = [\n",
+    "    # Duplicate documents on purpose - messy data\n",
+    "    PyPDFLoader(\"pdf_data/mssc6010_lectures.pdf\", extract_images=True),\n",
+    "    PyPDFLoader(\"pdf_data/mssc6010_hw_all.pdf\", extract_images=True),\n",
+    "    PyPDFLoader(\"latex_docs/FinalNotesSheet.pdf\", extract_images=True), # this is just a scanned image\n",
+    "    PyPDFLoader(\"pdf_data/mssc6010_hw_all.pdf\", extract_images=True)\n",
+    "]\n",
+    "docs = []\n",
+    "for loader in loaders:\n",
+    "    docs.extend(loader.load())\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d6d5e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "223"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size = 500,\n",
+    "    chunk_overlap = 76\n",
+    ")\n",
+    "splits = text_splitter.split_documents(docs)\n",
+    "len(splits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "951bd095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Embed\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "embedding = OpenAIEmbeddings(api_key=openai_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "266fbb0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorstores\n",
+    "from langchain.vectorstores import Chroma\n",
+    "persist_directory = 'docs/chroma'\n",
+    "!rm -rf ./docs/chroma # clear out the persist directory\n",
+    "\n",
+    "vectordb = Chroma.from_documents(\n",
+    "    documents=splits,\n",
+    "    embedding=embedding,\n",
+    "    persist_directory=persist_directory\n",
+    ")\n",
+    "print(vectordb._collection.count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ca5724",
+   "metadata": {},
+   "source": [
+    "Now let's try some searching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a6a2919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"what is Bayes Theorem?\"\n",
+    "result_docs = vectordb.similarity_search(question, k=4)\n",
+    "[result_docs[i].page_content for i in range(len(result_docs))] \n",
+    "# should give the top 4 resulting documents that have similarity to the question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d626ac8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"What is the theoretical mean of a Laplace distribution?\"\n",
+    "result_docs = vectordb.similarity_search(question, k=4)\n",
+    "[result_docs[i].page_content for i in range(len(result_docs))] \n",
+    "# should give the top 4 resulting documents that have similarity to the question"
    ]
   }
  ],
