--- a/langchain/0_chat_with_your_data.ipynb
+++ b/langchain/0_chat_with_your_data.ipynb
@@ -790,6 +790,152 @@
     "[result_docs[i].page_content for i in range(len(result_docs))] \n",
     "# should give the top 4 resulting documents that have similarity to the question"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7dba0fb",
+   "metadata": {},
+   "source": [
+    "## Retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b1378d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0993f9f",
+   "metadata": {},
+   "source": [
+    "## Question Answering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73386464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "# os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.langchain.plus\"\n",
+    "# os.environ[\"LANGCHAIN_API_KEY\"] = \"...\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5d58a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"what is Bayes Theorem?\"\n",
+    "docs = vectordb.similarity_search(question,k=3)\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import RetrievalQA\n",
+    "llm_name = \"gpt-4.5-turbo\"\n",
+    "llm = ChatOpenAI(model_name=llm_name, temperature=0)\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e34ab3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build prompt\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "template = \"\"\"Use the following pieces of context to answer the question at the end. If you don't know the answer, just say that you don't know, don't try to make up an answer. Use three sentences maximum. Keep the answer as concise as possible. \n",
+    "{context}\n",
+    "Question: {question}\n",
+    "Helpful Answer:\"\"\"\n",
+    "QA_CHAIN_PROMPT = PromptTemplate(input_variables=[\"context\", \"question\"],template=template,)\n",
+    "\n",
+    "# Run chain\n",
+    "from langchain.chains import RetrievalQA\n",
+    "question = \"what is Bayes Theorem?\"\n",
+    "qa_chain = RetrievalQA.from_chain_type(llm,\n",
+    "                                       retriever=vectordb.as_retriever(),\n",
+    "                                       return_source_documents=True,\n",
+    "                                       chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT})\n",
+    "\n",
+    "\n",
+    "result = qa_chain({\"query\": question})\n",
+    "result[\"result\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1dd8b91",
+   "metadata": {},
+   "source": [
+    "## Memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd0ac0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "\n",
+    "memory = ConversationBufferMemory(\n",
+    "    memory_key=\"chat_history\",\n",
+    "    return_messages=True\n",
+    ")\n",
+    "\n",
+    "retriever=vectordb.as_retriever()\n",
+    "qa = ConversationalRetrievalChain.from_llm(\n",
+    "    llm,\n",
+    "    retriever=retriever,\n",
+    "    memory=memory\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a852156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"what is Bayes Theorem?\"\n",
+    "result = qa({\"question\": question})\n",
+    "result['answer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8ba4f7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"how is Bayes Theorem used?\""
+   ]
   }
  ],
  "metadata": {
