--- a/langchain/try_flatten_fhir.ipynb
+++ b/langchain/try_flatten_fhir.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "bb6c00f1",
    "metadata": {},
    "outputs": [
@@ -61,9 +61,9 @@
    "source": [
     "# random sample of patient files\n",
     "patient_file_paths = [\n",
-    "    './fhir/Aaron697_Brekke496_2fa15bc7-8866-461a-9000-f739e425860a.json',\n",
-    "    './fhir/Danyell947_Kautzer186_132ff57e-a51d-425e-af89-16d95db75d0f.json',\n",
-    "    './fhir/Rocio28_Zboncak558_736aec9a-fba2-4b15-ab38-09af9998c035.json'\n",
+    "    '../fhir/Aaron697_Brekke496_2fa15bc7-8866-461a-9000-f739e425860a.json',\n",
+    "    '../fhir/Danyell947_Kautzer186_132ff57e-a51d-425e-af89-16d95db75d0f.json',\n",
+    "    '../fhir/Rocio28_Zboncak558_736aec9a-fba2-4b15-ab38-09af9998c035.json'\n",
     "]\n",
     "\n",
     "flattened_json_lines = []\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8f339b90",
    "metadata": {},
    "outputs": [
@@ -185,19 +185,19 @@
     "\n",
     "loaders = [\n",
     "    JSONLoader(\n",
-    "        file_path='./fhir/Aaron697_Brekke496_2fa15bc7-8866-461a-9000-f739e425860a.json',\n",
+    "        file_path='../fhir/Aaron697_Brekke496_2fa15bc7-8866-461a-9000-f739e425860a.json',\n",
     "        jq_schema=FHIR_BUNDLE_JQ_SCHEMA,\n",
     "        content_key=FHIR_BUNDLE_CONTENT_KEY,\n",
     "        is_content_key_jq_parsable=True,\n",
     "        text_content=False\n",
     "    ),\n",
-    "    JSONLoader(file_path='./fhir/Danyell947_Kautzer186_132ff57e-a51d-425e-af89-16d95db75d0f.json',\n",
+    "    JSONLoader(file_path='../fhir/Danyell947_Kautzer186_132ff57e-a51d-425e-af89-16d95db75d0f.json',\n",
     "        jq_schema=FHIR_BUNDLE_JQ_SCHEMA,\n",
     "        content_key=FHIR_BUNDLE_CONTENT_KEY,\n",
     "        is_content_key_jq_parsable=True,\n",
     "        text_content=False\n",
     "    ),\n",
-    "    JSONLoader(file_path='./fhir/Rocio28_Zboncak558_736aec9a-fba2-4b15-ab38-09af9998c035.json',\n",
+    "    JSONLoader(file_path='../fhir/Rocio28_Zboncak558_736aec9a-fba2-4b15-ab38-09af9998c035.json',\n",
     "        jq_schema=FHIR_BUNDLE_JQ_SCHEMA,\n",
     "        content_key=FHIR_BUNDLE_CONTENT_KEY,\n",
     "        is_content_key_jq_parsable=True,\n",
@@ -287,7 +287,7 @@
     "FHIR_BUNDLE_JQ_SCHEMA = \".entry[]\"\n",
     "FHIR_BUNDLE_CONTENT_KEY = \".resource\"\n",
     "\n",
-    "fhir_directory = './fhir/'\n",
+    "fhir_directory = '../fhir/'\n",
     "\n",
     "fhir_documents = []\n",
     "for file_name in os.listdir(fhir_directory):\n",
