--- a/sql/try_database_utils.ipynb
+++ b/sql/try_database_utils.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee23ef7d",
+   "metadata": {},
+   "source": [
+    "Populate database with synthetic data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2035833",
