digging into retrieval and suggesting improvements

--- a/langchain/try_fhir_rag.ipynb
+++ b/langchain/try_fhir_rag.ipynb
@@ -2045,12 +2045,137 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1026850",
+   "metadata": {},
+   "source": [
+    "For now, let's manually parse the resulting documents for the patient reference, to make the result easier to understand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ed42e67b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184', 'display': 'Mr. Aaron697 Brekke496'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def parse_result_docs_for_subject(docs):\n",
+    "    for doc in docs:\n",
+    "        page_json = json.loads(doc.page_content)\n",
+    "        if page_json[\"resourceType\"] and page_json[\"resourceType\"] in [\"Condition\", \"Encounter\", \"Observation\"]:\n",
+    "            print(page_json[\"subject\"])\n",
+    "        else:\n",
+    "            print(page_json)\n",
+    "\n",
+    "# test the function\n",
+    "if result_docs:\n",
+    "    parse_result_docs_for_subject(result_docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0bb33d",
+   "metadata": {},
+   "source": [
+    "Let's try pulling a larger number of documents from the vector store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cc4de80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184', 'display': 'Mr. Aaron697 Brekke496'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184'}\n",
+      "{'reference': 'urn:uuid:9c97ed3c-1493-4248-916f-e7a4050d108a'}\n",
+      "{'reference': 'urn:uuid:e4277266-87fb-4c74-9c60-3ae722a486ce'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"Which patients are at risk of cardiac arrest?\"\n",
+    "result_docs = vectordb.similarity_search(question, k=10)\n",
+    "if result_docs:\n",
+    "    parse_result_docs_for_subject(result_docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "264d5d66",
+   "metadata": {},
+   "source": [
+    "So with a higher number of requested documents, we start to see more patients represented in the results. It would appear that all three patients have some evidence of risk for cardiac arrest. That's a bad result, since not not all of the patients selected for this sample have evidence of risk for cardiac arrest 🙃\n",
+    "| Patient ID | Patient Name | Risk for Cardiac Arrest Mentioned in Patient Record? |\n",
+    "| --- | --- | --- |\n",
+    "| urn:uuid:5cbc121b-cd71-4428-b8b7-31e53eba8184 | 'Aaron697 Brekke496' | YES |\n",
+    "| urn:uuid:9c97ed3c-1493-4248-916f-e7a4050d108a | 'Danyell947 Kautzer186' | NO |\n",
+    "| urn:uuid:e4277266-87fb-4c74-9c60-3ae722a486ce | 'Rocio28 Zboncak558' | NO |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3d012ba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['{\"resourceType\": \"Observation\", \"id\": \"72df29b8-63c8-49a3-9b7d-19b4f519752e\", \"status\": \"final\", \"category\": [{\"coding\": [{\"system\": \"http://terminology.hl7.org/CodeSystem/observation-category\", \"code\": \"vital-signs\", \"display\": \"vital-signs\"}]}], \"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"55284-4\", \"display\": \"Blood Pressure\"}], \"text\": \"Blood Pressure\"}, \"subject\": {\"reference\": \"urn:uuid:9c97ed3c-1493-4248-916f-e7a4050d108a\"}, \"encounter\": {\"reference\": \"urn:uuid:db979bbd-1851-4d84-a7ab-eb442a7da70b\"}, \"effectiveDateTime\": \"2017-03-11T19:01:36-05:00\", \"issued\": \"2017-03-11T19:01:36.831-05:00\", \"component\": [{\"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"8462-4\", \"display\": \"Diastolic Blood Pressure\"}], \"text\": \"Diastolic Blood Pressure\"}, \"valueQuantity\": {\"value\": 74.30063613788344, \"unit\": \"mm[Hg]\", \"system\": \"http://unitsofmeasure.org\", \"code\": \"mm[Hg]\"}}, {\"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"8480-6\", \"display\": \"Systolic Blood Pressure\"}], \"text\": \"Systolic Blood Pressure\"}, \"valueQuantity\": {\"value\": 123.1914842317355, \"unit\": \"mm[Hg]\", \"system\": \"http://unitsofmeasure.org\", \"code\": \"mm[Hg]\"}}]}',\n",
+       " '{\"resourceType\": \"Observation\", \"id\": \"70ab8c0a-3c62-4484-babd-fcabb6008db3\", \"status\": \"final\", \"category\": [{\"coding\": [{\"system\": \"http://terminology.hl7.org/CodeSystem/observation-category\", \"code\": \"vital-signs\", \"display\": \"vital-signs\"}]}], \"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"55284-4\", \"display\": \"Blood Pressure\"}], \"text\": \"Blood Pressure\"}, \"subject\": {\"reference\": \"urn:uuid:e4277266-87fb-4c74-9c60-3ae722a486ce\"}, \"encounter\": {\"reference\": \"urn:uuid:c5e696d7-d025-45ef-82e7-6ddcdbf6bc5c\"}, \"effectiveDateTime\": \"2011-04-18T17:27:27-04:00\", \"issued\": \"2011-04-18T17:27:27.318-04:00\", \"component\": [{\"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"8462-4\", \"display\": \"Diastolic Blood Pressure\"}], \"text\": \"Diastolic Blood Pressure\"}, \"valueQuantity\": {\"value\": 72.42026165803979, \"unit\": \"mm[Hg]\", \"system\": \"http://unitsofmeasure.org\", \"code\": \"mm[Hg]\"}}, {\"code\": {\"coding\": [{\"system\": \"http://loinc.org\", \"code\": \"8480-6\", \"display\": \"Systolic Blood Pressure\"}], \"text\": \"Systolic Blood Pressure\"}, \"valueQuantity\": {\"value\": 117.01717249652428, \"unit\": \"mm[Hg]\", \"system\": \"http://unitsofmeasure.org\", \"code\": \"mm[Hg]\"}}]}']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[doc.page_content for doc in result_docs[-2:]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b41bb1a4",
+   "metadata": {},
+   "source": [
+    "It would appear that the results that show for those patients are each Blood Pressure measurements, which is interesting. I like that the similarity search found documents that had to do with indicators of heart health. However, on first glance, the values appear to me to be within the normal range for a typical patient, but I'm no doctor. So this search could be improved in a few ways:\n",
+    "1. Graph traversal through the references to provide the patient related to the observation/condition/encounter as a result\n",
+    "    1. This would help actually answer the question of \"Which patients\"\n",
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ddbaca3a",
    "metadata": {},
    "source": [
     "# Expanding the data source\n",
     "\n",
-    "Let's try loading more of the patient files as documents"
+    "Let's try loading more of the patient files as documents and see how many different patient records are produced at that point."
    ]
   },
   {
@@ -2060,7 +2185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Document Loading\n",
     "import os\n",
+    "from langchain_community.document_loaders import JSONLoader\n",
     "\n",
     "FHIR_BUNDLE_JQ_SCHEMA = \".entry[]\"\n",
     "FHIR_BUNDLE_CONTENT_KEY = \".resource\"\n",
@@ -2079,6 +2206,39 @@
     "    fhir_documents.extend(loader.load())\n",
     "\n",
     "len(fhir_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ebe7dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorstores\n",
+    "from langchain.vectorstores import Chroma\n",
+    "\n",
+    "persist_directory = 'docs/chroma'\n",
+    "!rm -rf ./docs/chroma # clear out the persist directory\n",
+    "\n",
+    "vectordb = Chroma.from_documents(\n",
+    "    documents=docs,\n",
+    "    embedding=embedding,\n",
+    "    persist_directory=persist_directory\n",
+    ")\n",
+    "print(vectordb._collection.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a92c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Which patients are at risk of cardiac arrest?\"\n",
+    "result_docs = vectordb.similarity_search(question, k=100)\n",
+    "[result_docs[i].page_content for i in range(len(result_docs))]"
    ]
   }
  ],
