playing around with sql

--- a/sql/try_database_utils.ipynb
+++ b/sql/try_database_utils.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "87c5f4bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import database_utils\n",
+    "import products_database_utils\n",
     "import utils\n",
     "DB_PATH = \"products.db\""
    ]
@@ -35,12 +35,12 @@
     }
    ],
    "source": [
-    "database_utils.create_db(DB_PATH, n_employees=100, n_products=200, n_txns_per_product=200000)"
+    "products_database_utils.create_db(DB_PATH, n_employees=100, n_products=200, n_txns_per_product=200000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "65b7af35",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,13 @@
     }
    ],
    "source": [
-    "schema_text = database_utils.get_schema(DB_PATH)\n",
+    "schema_text = products_database_utils.get_schema(DB_PATH)\n",
     "utils.print_html(schema_text, f\"Table Schemas in {DB_PATH}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6c00ecfd",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
     "    order by release_date asc\n",
     "    limit 10\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, query)"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8f9b75bd",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
     "    join transactions on employees.id=transactions.employee_id\n",
     "    where transactions.action=\"insert\"\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, \"Which employee is responsible for releasing the most products?\")"
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92ab6465",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
     "    order by total_revenue desc\n",
     "    limit 10;\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, \"Who are the top performing employees in terms of sales?\")"
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "02af308d",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
     "    order by revenue desc\n",
     "    limit 10;\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, \"Who are the top performing employees in terms of sales this calendar year?\")"
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "de6de91e",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
     "    group by date(ts, 'start of year')\n",
     "    order by year\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, \"What is the yearly revenue of the company?\")"
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9baaab2a",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
     "    group by date(release_date, 'start of year')\n",
     "    order by year\n",
     "    \"\"\"\n",
-    "results = database_utils.execute_sql(\n",
+    "results = products_database_utils.execute_sql(\n",
     "    query=query,\n",
     "    db_path=DB_PATH)\n",
     "utils.print_html(results, \"How many products are released per year?\")"
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "97c05706",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
     }
    ],
    "source": [
-    "database_utils.execute_sql(\n",
+    "products_database_utils.execute_sql(\n",
     "    query=\"select date('now', 'start of year')\",\n",
     "    db_path=DB_PATH)"
    ]
